--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     :root {
       --color-patternbot-interface: 0;
       --color-patternbot-interface-opposite: 255;
-        --font-patternbot-primary: font-family: "Archivo Black", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        --font-patternbot-primary: , -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     }
 
       html {
-        font-family: font-family: "Archivo Black", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        font-family: , -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
       }
 
     body {
       background-color: #fff;
     }
   </style>
+    <link href="&lt;link href&#x3D;&quot;https://fonts.googleapis.com/css?family&#x3D;Archivo+Black&quot; rel&#x3D;&quot;stylesheet&quot;&gt;" rel="stylesheet">
 </head>
 <body>
 
