--- a/patterns/typography/02-horizontal-spacing.html
+++ b/patterns/typography/02-horizontal-spacing.html
@@ -17,13 +17,14 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet">
   <style>
     :root {
-        --font-patternbot-primary: font-family: "Archivo Black", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        --font-patternbot-primary: , -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     }
 
       html {
-        font-family: font-family: "Archivo Black", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        font-family: , -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
       }
   </style>
+    <link href="<link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">" rel="stylesheet">
 </head>
 <body>
 
