This commit deletes relative sector

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       background-color: #fff;
     }
   </style>
-    <link href="&lt;link href&#x3D;&quot;https://fonts.googleapis.com/css?family&#x3D;Archivo+Black&quot; rel&#x3D;&quot;stylesheet&quot;&gt;" rel="stylesheet">
+    <link href="&lt;link href&#x3D;&quot;https://fonts.googleapis.com/css?family&#x3D;Archivo+Black&quot;&gt;" rel="stylesheet">
 </head>
 <body>
 
