--- a/patterns/typography/03-font-sizes.html
+++ b/patterns/typography/03-font-sizes.html
@@ -24,7 +24,7 @@
         font-family: , -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
       }
   </style>
-    <link href="<link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">" rel="stylesheet">
+    <link href="<link href="https://fonts.googleapis.com/css?family=Archivo+Black">" rel="stylesheet">
 </head>
 <body>
 
