This commit fixes names of colours.

--- a/patterns/brand/2-colours.html
+++ b/patterns/brand/2-colours.html
@@ -64,7 +64,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#00D4C4</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#00d4c4</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(0, 212, 196, 1)</code></li>
             </ul>
           </li>
@@ -82,7 +82,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#B9EEE3</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#b9eee3</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(185, 238, 227, 1)</code></li>
             </ul>
           </li>
@@ -116,7 +116,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#FF6871</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#ff6871</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(255, 104, 113, 1)</code></li>
             </ul>
           </li>
@@ -143,7 +143,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#00D4C4</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#00d4c4</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(0, 212, 196, 1)</code></li>
             </ul>
           </li>
@@ -162,7 +162,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#BCF5A9</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#bcf5a9</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(188, 245, 169, 1)</code></li>
             </ul>
           </li>
@@ -189,7 +189,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#B9EEE3</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#b9eee3</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(185, 238, 227, 1)</code></li>
             </ul>
           </li>
