--- a/patterns/brand/2-colours.html
+++ b/patterns/brand/2-colours.html
@@ -16,14 +16,14 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet">
   <style>
     :root {
-        --font-patternbot-primary: , -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        --font-patternbot-primary: "Archivo Black", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     }
 
       html {
-        font-family: , -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+        font-family: "Archivo Black", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
       }
   </style>
-    <link href="<link href="https://fonts.googleapis.com/css?family=Archivo+Black">" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
 </head>
 <body>
 
@@ -189,8 +189,8 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#b9eee3</code></li>
-              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(185, 238, 227, 1)</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#fffff0</code></li>
+              <li class="patternbot-color-swatch-labels-rgba"><code>rgba(255, 255, 240, 1)</code></li>
             </ul>
           </li>
       </ul>
