This commit changes modules

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
   </div>
 
     <div class="pattern-desc milli island" >
-      <div class="max-length"><p><a href="https://modulifier.web-dev.tools/#responsive;images;list-group;embed;media-object;icons;hidden;positioning;nice-lists;forms;buttons;accessibility;print">Modulifier</a> generates a series of simple, default CSS components that can be used throughout the site, or as basic building blocks for more complex patterns. <a href="https://learn-the-web.algonquindesign.ca/topics/modulifier-cheat-sheet/">See the documentation for all available classes.</a></p>
+      <div class="max-length"><p><a href="https://modulifier.web-dev.tools/#responsive;images;list-group;embed;media-object;icons;positioning;buttons;accessibility;print">Modulifier</a> generates a series of simple, default CSS components that can be used throughout the site, or as basic building blocks for more complex patterns. <a href="https://learn-the-web.algonquindesign.ca/topics/modulifier-cheat-sheet/">See the documentation for all available classes.</a></p>
 </div>
     </div>
 
