Fix colour code font case

--- a/patterns/brand/2-colours.html
+++ b/patterns/brand/2-colours.html
@@ -65,7 +65,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#DB4448</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#db4448</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(219, 68, 72, 1)</code></li>
             </ul>
           </li>
@@ -83,7 +83,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#FAE053</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#fae053</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(250, 224, 83, 1)</code></li>
             </ul>
           </li>
@@ -101,7 +101,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#2461CC</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#2461cc</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(36, 97, 204, 1)</code></li>
             </ul>
           </li>
@@ -137,7 +137,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#EE7236</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#ee7236</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(238, 114, 54, 1)</code></li>
             </ul>
           </li>
@@ -173,7 +173,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#4AA26C</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#4aa26c</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(74, 162, 108, 1)</code></li>
             </ul>
           </li>
@@ -200,7 +200,7 @@
                   </i>
                 </button>
               </li>
-              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#333333</code></li>
+              <li class="patternbot-color-swatch-labels-hex push-1-8"><code>#333</code></li>
               <li class="patternbot-color-swatch-labels-rgba"><code>rgba(51, 51, 51, 1)</code></li>
             </ul>
           </li>
