--- a/patterns/brand/3-typefaces.html
+++ b/patterns/brand/3-typefaces.html
@@ -50,6 +50,11 @@
         </li>
       </ul>
       <h2 class="patternbot-color-body yotta" style="font-family:var(--font-primary);"><span style="color: var(--color-primary)">Archivo Black</span> is the primary typeface</h2>
+        <div class="patternbot-max-length tera max-length">
+          <p>This font is bold and is the stand out for most of the page.</p>
+<p>Use the primary typeface for body copy, captions, sections and all default text</p>
+
+        </div>
 
           <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: normal;</code></li>
@@ -82,6 +87,11 @@
         </li>
       </ul>
       <h2 class="patternbot-color-body yotta" style="font-family:var(--font-secondary);"><span style="color: var(--color-primary)">Playfair Display</span> is the secondary typeface</h2>
+        <div class="patternbot-max-length tera max-length">
+          <p>This font is for text and paragraphs.</p>
+<p>Use the secondary typeface for all headings, buttons and useful information</p>
+
+        </div>
 
           <ul class="patternbot-code-details patternbot-list-group list-group-inline micro push-1-2 pad-t">
             <li><code>font-weight: normal;</code></li>
