--- a/patterns/cards/basic-card.html
+++ b/patterns/cards/basic-card.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="utf-8">
   <title>Basic Card</title>
-</head>
-<body>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -12,4 +10,10 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
   <link href="cards.css" rel="stylesheet">
+</head>
+<body>
+  <div class="card island">
+    <h2 class="push-1-3">This is a card</h2>
+    <p>THIS IS A BASIC CARD</p>
+  </div>
 </body>
