--- a/patterns/cards/image-card.html
+++ b/patterns/cards/image-card.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="utf-8">
   <title>Item Card</title>
-</head>
-<body>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -12,4 +10,13 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
   <link href="cards.css" rel="stylesheet">
+</head>
+<body>
+  <div class="grid island">
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 image-container size-img">
+      <a href="#"><img class="img-flex" src="../../images/Cardimage.png" alt=""></a>
+    </div>
+  </div>
+</body>
+
 </body>
