--- a/patterns/cards/product-card.html
+++ b/patterns/cards/product-card.html
@@ -2,9 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Shop Card</title>
-</head>
-<body>
+  <title>Product Card</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -12,4 +10,7 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
   <link href="cards.css" rel="stylesheet">
+</head>
+<body>
+
 </body>
