This commit adds image to product card

--- a/patterns/cards/product-card.html
+++ b/patterns/cards/product-card.html
@@ -12,5 +12,19 @@
   <link href="cards.css" rel="stylesheet">
 </head>
 <body>
-
+  <body class="island">
+    <div class="product-card">
+      <a href="#"><img class="img-flex push-1-2" src="../../images/roses.jpg" alt=""></a>
+      <div class="product-content island">
+        <h2 class="push-1-4 tera">Roses</h2>
+        <h3 class="milli push-1-2">$5.99 – $11.99</h3>
+        <dl class="product-list push-0">
+          <dt class="giga">Quantity/Bundle</dt>
+          <dd><a href="#">4</a></dd>
+          <dd><a href="#">10</a></dd>
+          <dd><a href="#">14</a></dd>
+        </dl>
+      </div>
+    </div>
+  </body>
 </body>
