Add Button to library

--- a/index.html
+++ b/index.html
@@ -692,9 +692,9 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="buttons-buttons-code-sample-copy-chunk">&lt;a class="btn bold peta" href="#"&gt;&lt;span>More&lt;/span>&lt;/a>
-&lt;a class="btn btn-light bold mega" href="#">Cart&lt;/a>
-&lt;a class="btn btn-ghost bold milli" href="#">Menu&lt;/a>
+              <code><pre id="buttons-buttons-code-sample-copy-chunk">&lt;a class="btn push-r"&gt;&lt;span class="btn-more-side" aria-label="More">More&lt;i class="btn-more-opposite">&lt;/i>&lt;/span>&lt;/a>
+&lt;a class="btn btn-cart push-r">&lt;span class="btn-cart-side" aria-label="Cart">Cart&lt;i class="btn-cart-opposite">&lt;/i>&lt;/span>&lt;/a>
+&lt;a class="btn btn-save">&lt;span class="btn-save-side" aria-label="Cart">Save&lt;i class="btn-save-opposite">&lt;/i>&lt;/span>&lt;/a>
 </pre></code>
             </div>
           </div>
