--- a/patterns/buttons/buttons.html
+++ b/patterns/buttons/buttons.html
@@ -14,9 +14,9 @@
 </head>
 <body>
 
-  <a class="btn bold peta" href="#"><span>More</span></a>
-  <a class="btn btn-light bold mega" href="#">Cart</a>
-  <a class="btn btn-ghost bold milli" href="#">Menu</a>
+  <a class="btn push-r"><span class="btn-more-side" aria-label="More">More<i class="btn-more-opposite"></i></span></a>
+  <a class="btn btn-cart push-r"><span class="btn-cart-side" aria-label="Cart">Cart<i class="btn-cart-opposite"></i></span></a>
+  <a class="btn btn-save"><span class="btn-save-side" aria-label="Cart">Save<i class="btn-save-opposite"></i></span></a>
 
 </body>
 </html>
