--- a/patterns/cards/icon-card.html
+++ b/patterns/cards/icon-card.html
@@ -12,7 +12,10 @@
   <link href="cards.css" rel="stylesheet">
 </head>
 <body>
-  <div class="card island">
+  <div class="card island-1-2 text-center">
+    <i class="icon i-128 push-1-2">
+      <svg><use xlink:href="../../images/icons.svg#velociraptor"/></svg>
+    </i>
     <h2 class="push-1-4">This is a card</h2>
     <p class="push-0">THIS IS A BASIC CARD</p>
   </div>
