--- a/patterns/brand/3-typefaces.html
+++ b/patterns/brand/3-typefaces.html
@@ -51,7 +51,7 @@
       </ul>
       <h2 class="patternbot-color-body yotta" style="font-family:var(--font-primary);"><span style="color: var(--color-primary)">Rubik</span> is the primary typeface</h2>
         <div class="patternbot-max-length tera max-length">
-          <p>The primary typeface is a thick slab serif that really shows strength and roundness over our domain.</p>
+          <p>The primary typeface is a thick sans-serif that really shows strength and roundness over our domain.</p>
 
         </div>
 
