--- a/patterns/cards/home-banner.html
+++ b/patterns/cards/home-banner.html
@@ -9,14 +9,21 @@
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
-  <link href="buttons.css" rel="stylesheet">
+  <link href="cards.css" rel="stylesheet">
 
 </head>
 <body>
+  <div class="banner relative">
+    <div>
+      <img class="img-flex" src="../../images/rubik-mainbanner.jpg" alt="">
+    </div>
+    <div class="text-box-banner absolute pin-lc gutter-2">
+     <h1 class="pad-t-2">Home of the Rubik</h1>
+     <p class="max-length">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+    </div>
 
-  <a class="btn"><span aria-label="More">More<i></i></span></a>
-  <a class="btn btn-save pad-t"><span aria-label="Save">Save<i></i></span></a>
-  <a class="btn btn-cart push-r-2 pad-t"><span aria-label="Cart">Cart<i></i></span></a>
+  </div>
+
 
 </body>
 </html>
