This commit fixes svg icons

--- a/patterns/cards/product-card.html
+++ b/patterns/cards/product-card.html
@@ -13,18 +13,15 @@
 </head>
 <body>
   <body class="island">
-    <div class="product-card">
-      <a href="#"><img class="img-flex push-1-2" src="../../images/roses.jpg" alt=""></a>
-      <div class="product-content island">
-        <h2 class="push-1-4 tera">Roses</h2>
-        <h3 class="milli push-1-2">$5.99 – $11.99</h3>
-        <dl class="product-list push-0">
-          <dt class="giga">Quantity/Bundle</dt>
-          <dd><a href="#">4</a></dd>
-          <dd><a href="#">10</a></dd>
-          <dd><a href="#">14</a></dd>
-        </dl>
+    <a class="product card" href="#">
+      <div class="embed embed-1by1">
+        <img class="embed-item" src="https://placehold.it/420x420" alt="">
       </div>
-    </div>
+      <div class="island-1-2">
+        <h3 class="push-0">Heres a product shot</h3>
+        <p class="italic">Pricing and other info</p>
+        <p class="peta font-medium text-primary push">$5.99</p>
+      </div>
+    </a>
   </body>
 </body>
