--- a/patterns/icons/1-icons.html
+++ b/patterns/icons/1-icons.html
@@ -36,35 +36,236 @@
     </symbol>
   </svg>
 
-  <ul class="patternbot-icon-display patternbot-list-group list-group-inline">
-    <li>
+  <ul class="patternbot-icon-display patternbot-list-group list-group-inline ">
+    <li class="pad-b-1-2" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
-            <svg><use xlink:href="../../images/icons.svg#icons" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#artboard-1" /></svg>
           </i>
         </div>
         <div class="patternbot-icon-display-right center-contents island-1-2">
           <i class="icon i-64 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#icons" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#artboard-1" /></svg>
           </i>
           <i class="icon i-32 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#icons" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#artboard-1" /></svg>
           </i>
           <i class="icon i-18 block">
-            <svg><use xlink:href="../../images/icons.svg#icons" /></svg>
+            <svg><use xlink:href="../../images/icons.svg#artboard-1" /></svg>
           </i>
         </div>
       </div>
       <div class="text-center patternbot-color-body">
         <i class="icon i-24 patternbot-color-body">
-          <svg><use xlink:href="../../images/icons.svg#icons" /></svg>
+          <svg><use xlink:href="../../images/icons.svg#artboard-1" /></svg>
         </i>
-        <span class="icon-label ib"><code class="micro">#icons</code></span>
         <span class="icon-label ib">
-          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: icons" aria-label="Copy icon: icons" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#icons&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+          <code class="micro" style="">
+            #artboard-1
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: artboard-1" aria-label="Copy icon: artboard-1" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#artboard-1&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
             <i class="icon i-18 patternbot-color-body">
-              <svg><use xlink:href="#icon-copy"></use></svg>
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#artboard-9" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#artboard-9" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#artboard-9" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#artboard-9" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#artboard-9" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #artboard-9
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: artboard-9" aria-label="Copy icon: artboard-9" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#artboard-9&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#artboard-8" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#artboard-8" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#artboard-8" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#artboard-8" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#artboard-8" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #artboard-8
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: artboard-8" aria-label="Copy icon: artboard-8" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#artboard-8&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#artboard-7" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#artboard-7" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#artboard-7" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#artboard-7" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#artboard-7" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #artboard-7
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: artboard-7" aria-label="Copy icon: artboard-7" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#artboard-7&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#artboard-10" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#artboard-10" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#artboard-10" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#artboard-10" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#artboard-10" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #artboard-10
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: artboard-10" aria-label="Copy icon: artboard-10" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#artboard-10&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#artboard-11" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#artboard-11" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#artboard-11" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#artboard-11" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#artboard-11" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #artboard-11
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: artboard-11" aria-label="Copy icon: artboard-11" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#artboard-11&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
             </i>
           </button>
         </span>
