--- a/patterns/cards/product-card.html
+++ b/patterns/cards/product-card.html
@@ -4,23 +4,21 @@
   <meta charset="utf-8">
   <title>Product Card</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/modules.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
-  <link href="css/type.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="../../common/modules.css" rel="stylesheet">
+  <link href="../../common/grid.css" rel="stylesheet">
+  <link href="../../common/type.css" rel="stylesheet">
+  <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
   <link href="cards.css" rel="stylesheet">
 </head>
 <body>
-  <body class="island">
-    <a class="product card" href="#">
+    <a class="productcard island" href="#">
       <div class="embed embed-1by1">
-        <img class="embed-item" src="https://placehold.it/420x420" alt="">
+        <img class="embed-item img-flex" src="https://placehold.it/1by1" alt="">
       </div>
-      <div class="island-1-2">
+      <div class="island-1-2 text-center">
         <h3 class="push-0">Heres a product shot</h3>
         <p class="italic">Pricing and other info</p>
-        <p class="peta font-medium text-primary push">$5.99</p>
       </div>
     </a>
   </body>
