--- a/patterns/cards/image-card.html
+++ b/patterns/cards/image-card.html
@@ -12,11 +12,7 @@
   <link href="cards.css" rel="stylesheet">
 </head>
 <body>
-  <div class="grid island">
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 image-container size-img">
+    <div class="image-container size-img">
       <a href="#"><img class="img-flex" src="../../images/cardimage.png" alt=""></a>
     </div>
-  </div>
-</body>
-
 </body>
